Add check on process instance id
Make sure the events are related to the current process instance